--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "materialize-css": "^1.0.0",
     "slug": "^5.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
